aanpassingen om te doen werken zonder module-info, ook nieuwe versie jdk